# registrar

./: .coderabbit.yaml  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  security.yml
scripts/: build-release.sh  registrar_entry.py
src/registrar/: __init__.py  apply.py  cli.py  doctor.py  errors.py  git.py  inventory.py  model.py  paths.py  plan.py  refs.py  registry.py  render.py  seed.py  worktree.py  worktree_lifecycle.py
tests/: conftest.py  test_apply.py  test_cli.py  test_inventory.py  test_refs.py  test_registry_and_plans.py  test_seed.py  test_worktree_cli.py
