[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project]
name = "registrar"
version = "0.3.5"
description = "Local workspace asset registry and lifecycle dry-run control plane"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Eridanus" }]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
registrar = "registrar.cli:run"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-mock",
    "pytest-randomly",
    "poethepoet",
    "pyrefly>=1.1.1",
]
freeze = ["pyinstaller>=6,<7"]

[tool.poe.tasks]
lint = "uvx ruff@0.15.16 check ."
fmt = "uvx ruff@0.15.16 format ."
typecheck = "pyrefly check"
test = "pytest"
check = { sequence = ["lint", "typecheck", "test"], help = "lint + typecheck + test" }
freeze = { cmd = "./scripts/build-release.sh", help = "build the release binary" }

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-ignore = ["TRY003"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["S101", "PLR2004"]
"src/registrar/cli.py" = ["PLR0913"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.coverage.run]
source = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
